--- a/app/src/locales/az.json
+++ b/app/src/locales/az.json
@@ -10,5 +10,7 @@
   "verifying": "Təsdiqlənir...",
   "verify": "Təsdiqlə",
   "otpVerification": "OTP təsdiqi",
-  "enterOtp": "Telefonunuza göndərilən OTP kodunu daxil edin."
+  "enterOtp": "Telefonunuza göndərilən OTP kodunu daxil edin.",
+  "phoneNumberAlreadyTaken":"Nömrə qeydiyyatdan keçib",
+  "userNameTaken":"Gecikmisen, bu ad seçilib"
 }
