welcome, register screen translations

--- a/app/src/locales/az.json
+++ b/app/src/locales/az.json
@@ -10,8 +10,33 @@
   "verify": "Təsdiqlə",
   "otpVerification": "OTP təsdiqi",
   "enterOtp": "Telefonunuza göndərilən OTP kodunu daxil edin.",
-  "phoneNumberAlreadyTaken":"Nömrə qeydiyyatdan keçib",
-  "userNameTaken":"Gecikmisen, bu ad seçilib",
-  "userNotFound":"İstifadəçi tapılmadı",
-  "wrongPassword":"Şifrə yanlışdır"
+  "phoneNumberAlreadyTaken": "Nömrə qeydiyyatdan keçib",
+  "userNameTaken": "Gecikmisen, bu ad seçilib",
+  "userNotFound": "İstifadəçi tapılmadı",
+  "wrongPassword": "Şifrə yanlışdır",
+  "heyThere!": "Salam!",
+  "login": "Hesabıma gir",
+  "register": "Mən hələ təzəyəm",
+  "youngerThan18": "Yaşınız 18-dən kiçikdir. Qeydiyyat mümkün deyil.",
+  "mustPickDob": "Doğum tarixinizi seçməlisiniz.",
+  "welcome": "Xoş gəldin!",
+  "pickDob": "Doğum tarixinizi seçin",
+  "continue": "Davam et!",
+  "mustEnterPhoneNumber": "Nömrə boş buraxıla bilməz",
+  "inputPhoneNumber": "Mobil nömrə daxil edək",
+  "forNumber": "Nömrəni yazmaq üçün",
+  "nameCannotBeEmpty": "Ad boş buraxıla bilməz",
+  "min3CharsInUserName": "Ad ən az 3 simvol olmalıdır",
+  "usernameMaxLengthMessage": "Ad ən çox 12 simvol olmalıdır",
+  "usernameLabel": "İstifadəçi adın",
+  "usernamePlaceholder": "Səni necə adlandıraq?",
+  "passwordRequired": "Şifrə boş buraxıla bilməz",
+  "passwordMinLengthMessage": "Şifrə ən az 6 simvol olmalıdır",
+  "passwordMaxLengthMessage": "Şifrə ən çox 12 simvol olmalıdır",
+  "passwordSpecialCharMessage": "Ən azı bir xüsusi simvol olmalıdır",
+  "passwordLabel": "Yeni şifrə",
+  "passwordPlaceholder": "Şifrə təyin edək",
+  "letsStartButton": "BAŞLAYAQ!",
+  "haveAccountPrompt": "Hesabın var? Giriş et",
+  "orSeparator": "və ya"
 }
