--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -1,16 +1,42 @@
 {
-  "userNotFound": "User not found",
-  "userAlreadyVerified": "User is already verified",
+  "userAlreadyVerified": "User already verified",
   "invalidOtp": "Invalid OTP",
   "otpExpired": "Your OTP has expired",
   "otpVerificationError": "Error during OTP verification",
-  "otpCodeError": "Please enter the complete OTP code",
+  "otpCodeError": "Please enter the full OTP code",
   "phoneNotFound": "Phone number not found. Please try again.",
   "otpSuccess": "Phone number successfully verified!",
   "verifying": "Verifying...",
   "verify": "Verify",
-  "otpVerification": "OTP Verification",
-  "enterOtp": "Enter the OTP sent to your phone.",
-  "phoneNumberAlreadyTaken":"Phone number already taken"
-
+  "otpVerification": "OTP verification",
+  "enterOtp": "Enter the OTP code sent to your phone.",
+  "phoneNumberAlreadyTaken": "Phone number already registered",
+  "userNameTaken": "Too late, this username is taken",
+  "userNotFound": "User not found",
+  "wrongPassword": "Wrong password",
+  "heyThere!": "Hey there!",
+  "login": "Log in to my account",
+  "register": "I'm new here",
+  "youngerThan18": "You are under 18. You can't register.",
+  "mustPickDob": "You must select your date of birth.",
+  "welcome": "Welcome!",
+  "pickDob": "Pick your date of birth",
+  "continue": "Continue!",
+  "mustEnterPhoneNumber": "Mobile number cannot be empty",
+  "inputPhoneNumber": "Enter mobile number",
+  "forNumber": "Your mobile number",
+  "nameCannotBeEmpty": "Username cannot be empty",
+  "min3CharsInUserName": "Username must be at least 3 characters long",
+  "usernameMaxLengthMessage": "Username can be a maximum of 12 characters",
+  "usernameLabel": "Username",
+  "usernamePlaceholder": "What should we call you?",
+  "passwordRequired": "Password cannot be empty",
+  "passwordMinLengthMessage": "Password must be at least 6 characters long",
+  "passwordMaxLengthMessage": "Password can be a maximum of 12 characters",
+  "passwordSpecialCharMessage": "Password must contain at least one special character",
+  "passwordLabel": "Password",
+  "passwordPlaceholder": "Set the password",
+  "letsStartButton": "LET'S START!",
+  "haveAccountPrompt": "Already have an account? Sign in",
+  "orSeparator": "or"
 }
