--- a/app/src/locales/ru.json
+++ b/app/src/locales/ru.json
@@ -1,6 +1,42 @@
 {
-  "userNotFound": "Пользователь не найден",
   "userAlreadyVerified": "Пользователь уже подтвержден",
   "invalidOtp": "Неверный OTP",
-  "otpExpired": "Ваш OTP истек"
+  "otpExpired": "Срок действия вашего OTP истек",
+  "otpVerificationError": "Ошибка при подтверждении OTP",
+  "otpCodeError": "Пожалуйста, введите полный код OTP",
+  "phoneNotFound": "Номер телефона не найден. Пожалуйста, попробуйте еще раз.",
+  "otpSuccess": "Номер телефона успешно подтвержден!",
+  "verifying": "Проверка...",
+  "verify": "Подтвердить",
+  "otpVerification": "Подтверждение OTP",
+  "enterOtp": "Введите код OTP, отправленный на ваш телефон.",
+  "phoneNumberAlreadyTaken": "Номер телефона уже зарегистрирован",
+  "userNameTaken": "Поздно, это имя пользователя занято",
+  "userNotFound": "Пользователь не найден",
+  "wrongPassword": "Неверный пароль",
+  "heyThere!": "Привет!",
+  "login": "Войти в мой аккаунт",
+  "register": "Я здесь новенький",
+  "youngerThan18": "Вам меньше 18 лет. Регистрация невозможна.",
+  "mustPickDob": "Вы должны выбрать дату рождения.",
+  "welcome": "Добро пожаловать!",
+  "pickDob": "Выберите дату рождения",
+  "continue": "Продолжить!",
+  "mustEnterPhoneNumber": "Номер не может быть пустым",
+  "inputPhoneNumber": "Введите мобильный номер",
+  "forNumber": "Для ввода номера",
+  "nameCannotBeEmpty": "Имя не может быть пустым",
+  "min3CharsInUserName": "Имя должно содержать хотя бы 3 символа",
+  "usernameMaxLengthMessage": "Имя не должно превышать 12 символов",
+  "usernameLabel": "Имя пользователя",
+  "usernamePlaceholder": "Как вас назвать?",
+  "passwordRequired": "Пароль не может быть пустым",
+  "passwordMinLengthMessage": "Пароль должен быть минимум 6 символов",
+  "passwordMaxLengthMessage": "Пароль должен быть максимум 12 символов",
+  "passwordSpecialCharMessage": "Пароль должен содержать хотя бы один специальный символ",
+  "passwordLabel": "Новый пароль",
+  "passwordPlaceholder": "Установите пароль",
+  "letsStartButton": "НАЧНЕМ!",
+  "haveAccountPrompt": "Есть аккаунт? Войти",
+  "orSeparator": "или"
 }
