changes to login and register flow/UI. i18n

--- a/app/src/locales/az.json
+++ b/app/src/locales/az.json
@@ -22,9 +22,9 @@
   "welcome": "Xoş gəldin!",
   "pickDob": "Doğum tarixinizi seçin",
   "continue": "Davam et!",
-  "mustEnterPhoneNumber": "Nömrə boş buraxıla bilməz",
-  "inputPhoneNumber": "Mobil nömrə daxil edək",
-  "forNumber": "Nömrəni yazmaq üçün",
+  "mustEnterEmail": "Email boş buraxıla bilməz",
+  "inputEmail": "Düzgün email daxil edək",
+  "forEmail": "Email yazmaq üçün",
   "nameCannotBeEmpty": "Ad boş buraxıla bilməz",
   "min3CharsInUserName": "Ad ən az 3 simvol olmalıdır",
   "usernameMaxLengthMessage": "Ad ən çox 12 simvol olmalıdır",
@@ -39,5 +39,20 @@
   "letsStartButton": "BAŞLAYAQ!",
   "haveAccountPrompt": "Hesabın var? Giriş et",
   "orSeparator": "və ya",
-  "greetingLabel":"Pivə almaq üçün qeydiyyatı tamamlayaq"
+  "greetingLabel": "Pivə almaq üçün qeydiyyatı tamamlayaq",
+  "emailPlaceholder": "Email ünvanınız",
+  "emailLabel": "Email ünvanı",
+  "termsText": "Qeydiyyatdan keçməklə siz {{terms}} razılaşırsınız, {{privacy}} qəbul edirsiniz və 18 yaşdan yuxarı olduğunuzu təsdiqləyirsiniz.",
+  "termsLink": "Qayda və Şərtlərimizlə",
+  "privacyLink": "Məxfilik Siyasətimizi",
+  "emailTaken": "Email istifadə olunub",
+  "registerButton": "Davam et",
+  "otpTitle": "OTP təsdiqi",
+  "otpSubtitle": "{email} adresinə göndərdiyimiz təsdiq kodunu daxil edin",
+  "otpError": "Yanlış OTP",
+  "resendOtp": "Yeni OTP göndər",
+  "verifyOtp": "Təsdiqlə",
+  "otpSent": "OTP uğurla göndərildi",
+  "alreadyHaveAccount": "Hesabınız var? {{login}}",
+  "loginLink": "Daxil olun"
 }
