--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -35,9 +35,27 @@
   "passwordMaxLengthMessage": "Password can be a maximum of 12 characters",
   "passwordSpecialCharMessage": "Password must contain at least one special character",
   "passwordLabel": "Password",
-  "passwordPlaceholder": "Set the password",
+  "passwordPlaceholder": "Choose a password",
   "letsStartButton": "LET'S START!",
   "haveAccountPrompt": "Already have an account? Sign in",
   "orSeparator": "or",
-  "greetingLabel": "Finish the registration to start gifting beers"
+  "greetingLabel": "Finish the registration to start gifting beers",
+  "alreadyHaveAnAccount": "Have an account? Log in",
+  "termsText": "By registering, you agree to our {{terms}} and accept our {{privacy}}, and confirm that you are over 18 years old.",
+  "termsLink": "Terms and Conditions",
+  "privacyLink": "Privacy Policy",
+  "otpTitle": "OTP Verification",
+  "otpSubtitle": "Enter the verification code sent to {{email}}",
+  "otpError": "Invalid OTP",
+  "resendOtp": "Resend OTP",
+  "verifyOtp": "Verify OTP",
+  "otpSent": "OTP has been sent successfully",
+  "emailPlaceholder": "Your email address",
+  "alreadyHaveAccount": "Already have an account? {{login}}",
+  "loginLink": "Log in",
+  "emailLabel": "Email address",
+  "inputEmail": "Enter a valid email address",
+  "registerButton":"Register",
+  "emailTaken":"This email has already been registered",
+  "mustEnterEmail":"Email cannot be empty"
 }
