--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -36,6 +36,7 @@
   "passwordSpecialCharMessage": "Password must contain at least one special character",
   "passwordLabel": "Password",
   "passwordPlaceholder": "Choose a password",
+  "passwordPlaceholderLogin": "Your password",
   "letsStartButton": "LET'S START!",
   "haveAccountPrompt": "Already have an account? Sign in",
   "orSeparator": "or",
@@ -55,7 +56,13 @@
   "loginLink": "Log in",
   "emailLabel": "Email address",
   "inputEmail": "Enter a valid email address",
-  "registerButton":"Register",
-  "emailTaken":"This email has already been registered",
-  "mustEnterEmail":"Email cannot be empty"
+  "registerButton": "Register",
+  "emailTaken": "This email has already been registered",
+  "mustEnterEmail": "Email cannot be empty",
+  "emailOrUsername": "Email or username",
+  "enterEmailOrUsername": "Your email or username",
+  "emailOrUsernameRequired":"Enter email or username",
+  "invalidEmailOrUsername":"Invalid email or username",
+  "notVerified":"User is not verified"
+  
 }
