--- a/app/src/locales/az.json
+++ b/app/src/locales/az.json
@@ -66,5 +66,7 @@
   "soon": "Tezliklə",
   "showAll": "Hamısını göstər",
   "places": "Məkanlar",
-  "explore": "Kəşf et"
+  "explore": "Kəşf et",
+  "youMayKnow":"Tanıya biləcəklərin",
+  "connect":"Tanış ol"
 }
