--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -78,5 +78,8 @@
   "loginToGift": "Log in to gift drinks",
   "noAccount": "Don't have an account? {{register}}",
   "registerLink": "Let's create one!",
-  "didntReceiveCode":"Didn't receive OTP"
+  "didntReceiveCode": "Didn't receive OTP",
+  "forgotPassword": "Forgot password",
+  "enterForgotEmail": "Enter username or email to reset your password",
+  "sendOtp": "Send OTP"
 }
