--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -78,8 +78,13 @@
   "loginToGift": "Log in to gift drinks",
   "noAccount": "Don't have an account? {{register}}",
   "registerLink": "Let's create one!",
-  "didntReceiveCode": "Didn't receive OTP",
+  "didntReceiveCode": "Didn't receive OTP?",
   "forgotPassword": "Forgot password",
   "enterForgotEmail": "Enter username or email to reset your password",
-  "sendOtp": "Send OTP"
+  "sendOtp": "Send OTP",
+  "resendIn": "send new OTP",
+  "confirmPasswordPlaceholder": "Confirm your password",
+  "resetPassword": "Reset your password",
+  "newPassword": "New password",
+  "confirmPasswordLabel":"Confirm password"
 }
