--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -55,10 +55,10 @@
   "otpSent": "OTP uğurla göndərildi",
   "alreadyHaveAccount": "Hesabınız var? {{login}}",
   "loginLink": "Daxil olun",
-  "emailOrUsername": "Email və ya istifadəçi adı",
-  "enterEmailOrUsername": "Email və ya istifadəçi adı",
-  "emailOrUsernameRequired": "Email/istifadəçi adı daxil edin",
-  "invalidEmailOrUsername": "Email/istifadəçi adı yanlışdır",
+  "identifier": "Email və ya istifadəçi adı",
+  "enterIdentifier": "Email və ya istifadəçi adı",
+  "identifierRequired": "Email/istifadəçi adı daxil edin",
+  "invalidIdentifier": "Email/istifadəçi adı yanlışdır",
   "headerHi": "Salam",
   "sendGift": "Hədiyyə göndər",
   "someoneSpecial": "Özəl birinə sevimli içkisi ilə sürpriz et",
