--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,10 +59,10 @@
   "registerButton": "Register",
   "emailTaken": "This email has already been registered",
   "mustEnterEmail": "Email cannot be empty",
-  "emailOrUsername": "Email or username",
-  "enterEmailOrUsername": "Your email or username",
-  "emailOrUsernameRequired": "Enter email or username",
-  "invalidEmailOrUsername": "Invalid email or username",
+  "identifier": "Email or username",
+  "enterIdentifier": "Your email or username",
+  "identifierRequired": "Enter email or username",
+  "invalidIdentifier": "Invalid email or username",
   "notVerified": "User is not verified",
   "headerHi": "Hi",
   "sendGift": "Send a gift",
@@ -91,6 +91,6 @@
   "confirmPasswordRequired": "Confirm your password",
   "enterNewPassword": "Enter new password",
   "resendNow": "Resend now",
-  "resendsLeft":"Tries left",
-  "sending":"Sending"
+  "resendsLeft": "Tries left",
+  "sending": "Sending"
 }
