--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -68,7 +68,7 @@
   "showAll": "Hamısını göstər",
   "places": "Məkanlar",
   "explore": "Kəşf et",
-  "youMayKnow": "Tanıya biləcəklərin",
+  "youMayKnow": "Önərilənlər",
   "connect": "Tanış ol",
   "didntReceiveCode": "OTP gəlmədi?",
   "youAreBack": "Sən qayıtdın",
