--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,7 +72,7 @@
   "showAll": "Show all",
   "places": "Places",
   "explore": "Explore",
-  "youMayKnow": "People you may know",
+  "youMayKnow": "Suggested",
   "connect": "Connect",
   "youAreBack": "You are back!",
   "loginToGift": "Log in to gift drinks",
